grammar.js
    source_file: ($) =>
      seq(
        optional($.option_statements),
        repeat(choice(
          prec(10, $.imports_statement),  // High precedence for imports
          $._declaration,
          $._statement,
          $._block_terminator
        ))
      ),


    _terminator: ($) =>
      choice(seq(optional(":"), choice("\n", "\r\n")), $._eof),

    _block_terminator: ($) => prec.right(repeat1(choice("\n", "\r\n", $._eof))),

    _identifier_token: ($) => token(prec(-1, /[a-zA-Z_][a-zA-Z0-9_]*/)),

    identifier: ($) =>
      choice(
        $._identifier_token,
        seq("[", /[^\]]+/, "]") // Bracketed identifier
      ),

    member_modifier: ($) =>
      token(
        prec(
          10,
          choice(
            ci("Public"),
            ci("Private"),
            ci("Protected"),
            ci("Friend"),
            ci("Protected Friend"),
            ci("Private Protected"),
            ci("ReadOnly"),
            ci("WriteOnly"),
            ci("Shared"),
            ci("Shadows"),
            ci("MustInherit"),
            ci("NotInheritable"),
            ci("Overrides"),
            ci("MustOverride"),
            ci("NotOverridable"),
            ci("Overridable"),
            ci("Overloads"),
            ci("WithEvents"),
            ci("Widening"),
            ci("Narrowing"),
            ci("Partial"),
            ci("Async"),
            ci("Iterator"),
            ci("Dim"),
            ci("Const")
          )
        )
      ),

    _expression: ($) =>
      choice(
        // $.aggregate_function,
        $._primary_expression,
        $.binary_expression,
        $.unary_expression,
        $.assignment_expression,
        $.conditional_expression,
        $.lambda_expression,
        $.await_expression,
        $.query_expression,
        $.typeof_is_expression
      ),


    binary_expression: ($) =>
      choice(
        // Special handling for "Is Not" as two tokens
        prec.left(
          PRECEDENCE.EQUALITY,
          seq(
            field("left", $._expression),
            field("operator", seq(ci("Is"), ci("Not"))),
            field("right", $._expression)
          )
        ),
        ...[
          ["^", PRECEDENCE.EXPONENTIATION],
          ["*", PRECEDENCE.MULTIPLICATIVE],
          ["/", PRECEDENCE.MULTIPLICATIVE],
          ["\\", PRECEDENCE.INTEGER_DIVISION],
          [ci("Mod"), PRECEDENCE.MODULO],
          ["+", PRECEDENCE.ADDITIVE],
          ["-", PRECEDENCE.ADDITIVE],
          ["&", PRECEDENCE.CONCATENATION],
          ["<<", PRECEDENCE.SHIFT],
          [">>", PRECEDENCE.SHIFT],
          ["<", PRECEDENCE.RELATIONAL],
          [">", PRECEDENCE.RELATIONAL],
          ["<=", PRECEDENCE.RELATIONAL],
          [">=", PRECEDENCE.RELATIONAL],
          ["=", PRECEDENCE.EQUALITY],
          ["<>", PRECEDENCE.EQUALITY],
          [ci("Is"), PRECEDENCE.EQUALITY],
          [ci("IsNot"), PRECEDENCE.EQUALITY],
          [ci("Like"), PRECEDENCE.RELATIONAL],
          [ci("And"), PRECEDENCE.LOGICAL_AND],
          [ci("AndAlso"), PRECEDENCE.LOGICAL_AND],
          [ci("Or"), PRECEDENCE.LOGICAL_OR],
          [ci("OrElse"), PRECEDENCE.LOGICAL_OR],
          [ci("Xor"), PRECEDENCE.LOGICAL_XOR],
        ].map(([op, precedence]) =>
          prec.left(
            precedence,
            seq(
              field("left", $._expression),
              field("operator", seq(op, optional(/_[ \t]*\r?\n/))),
              // Accept optional extras (comments, line continuation) here
              field("right", $._expression)
            )
          )
        )
      ),


    string_literal: ($) => seq('"', repeat(choice(/[^"\n]+/, '""')), '"'),
    _type: ($) =>
      choice(
        prec(2, $.nullable_type),  // Give nullable_type higher precedence
        $.simple_name,
        $.qualified_name,
        $.generic_name,
        $.predefined_type,
        $.array_type,
        $.tuple_type
      ),

    predefined_type: ($) =>
      choice(
        ci("Boolean"),
        ci("Byte"),
        ci("SByte"),
        ci("Char"),
        ci("Date"),
        ci("Decimal"),
        ci("Double"),
        ci("Integer"),
        ci("Long"),
        ci("Object"),
        ci("Short"),
        ci("Single"),
        ci("String"),
        ci("UInteger"),
        ci("ULong"),
        ci("UShort")
      ),

    as_clause: ($) => seq(
      ci("As"),
      field("declared_type", $._type)
    ),

    _declaration: ($) =>
      choice(
        $.namespace_declaration,
        $.class_declaration,
        $.structure_declaration,
        $.interface_declaration,
        $.module_declaration,
        $.enum_declaration,
        $.delegate_declaration
      ),

    class_declaration: ($) =>
      seq(
        optional(field("attributes", $.attribute_list)),
        optional(field("modifiers", repeat1($.member_modifier))), // Changed
        ci("Class"),
        field("name", $.identifier),
        optional(field("type_parameters", $.type_parameter_list)),
        $._block_terminator,
        field("body", repeat($._type_member_declaration)),
        ci("End"),
        ci("Class"),
        $._terminator
      ),

    _type_member_declaration: ($) =>
      choice(
        prec(-1, $.empty_statement),
        prec(10, $.inherits_statement),
        prec(10, $.implements_statement),
        prec(100, $.constructor_declaration),
        // Explicitly add statements that can appear at class level
        prec(200, $.try_statement),      // Very high precedence
        prec(200, $.select_statement),   // Very high precedence
        prec(200, $.if_statement),
        prec(200, $.while_statement),
        prec(200, $.do_statement),
        prec(200, $.for_statement),
        prec(200, $.for_each_statement),
        prec(200, $.using_statement),
        prec(200, $.with_statement),
        prec(200, $.synclock_statement),
        prec(200, $.throw_statement),
        prec(200, $.return_statement),
        prec(200, $.exit_statement),
        prec(200, $.continue_statement),
        prec(200, $.stop_statement),
        prec(200, $.end_statement),
        prec(200, $.goto_statement),
        prec(200, $.resume_statement),
        prec(200, $.error_statement),
        prec(200, $.on_error_statement),
        prec(200, $.redim_statement),
        prec(200, $.erase_statement),
        prec(200, $.raiseevent_statement),
        prec(200, $.add_handler_statement),
        prec(200, $.remove_handler_statement),
        prec(200, $.call_statement),
        prec(200, $.yield_statement),
        prec(200, $.assignment_statement),
        prec(200, $.expression_statement),
        prec(200, $.declaration_statement),
        prec(200, $.labeled_statement),
        prec(1, $.method_declaration),
        prec(1, $.property_declaration),
        prec(1, $.event_declaration),
        prec(1, $.operator_declaration),
        $.type_declaration_in_type,
        prec.dynamic(-100, $.field_declaration)  // Very low precedence
      ),

    variable_declarator: ($) =>
      seq(
        field("name", $.identifier),
        optional(choice(
          // Array bounds specification
          seq("(", field("bounds", commaSep1($._expression)), ")"),
          // Array rank specification
          $.array_rank_specifier
        )),
        optional(choice(
          // Regular type declaration
          $.as_clause,
          // "As New" pattern - more flexible
          seq(
            ci("As"),
            ci("New"),
            field("type", $._type),
            optional(field("arguments", $.argument_list)),
            optional(field("initializer", choice(
              $.object_initializer,
              $.collection_initializer
            )))
          )
        )),
        optional(seq("=", field("initializer", $._expression)))
      ),


    field_declaration: ($) =>
      prec.dynamic(-100, seq(
        optional(field("attributes", $.attribute_list)),
        optional(field("modifiers", repeat1($.member_modifier))),
        commaSep1($.variable_declarator),
        $._terminator
      )),

    _statement: ($) =>
      choice(
        $.empty_statement,
        $.labeled_statement,
        prec(2, $.select_statement),
        prec(2, $.try_statement),  // Give try_statement higher precedence
        $.declaration_statement,
        $.expression_statement,
        $.assignment_statement,
        $.call_statement,
        $.if_statement,
        $.while_statement,
        $.do_statement,
        $.for_statement,
        $.for_each_statement,
        $.using_statement,
        $.with_statement,
        $.throw_statement,
        $.return_statement,
        $.yield_statement,
        $.exit_statement,
        $.continue_statement,
        $.stop_statement,
        $.end_statement,
        $.goto_statement,
        $.resume_statement,
        $.error_statement,
        $.on_error_statement,
        $.redim_statement,
        $.erase_statement,
        $.synclock_statement,
        $.raiseevent_statement,
        $.add_handler_statement,
        $.remove_handler_statement
      ),

    empty_statement: ($) => $._terminator,

    expression_statement: ($) => seq($._expression, $._terminator),
